<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Foodle</string>
    <string name="action_settings">Settings</string>
    <string name="GoogleApiKey" translatable="false">AIzaSyA0hQfTfzqvzll1Ee7zeFbYDMLqmQFJuB0</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_order_menu">Order Menu</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_confirm_password_non_match">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="btn_login">login</string>
    <string name="btn_facebook_login">login with facebook</string>
    <string name="btn_enter_register">Sign me up!</string>
    <!---->


    <!--FACEBOOK-->
    <string name="facebook_app_id" translatable="false">125450491526066</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb125450491526066</string>
    <string name="title_activity_test_maps" translatable="false">Map</string>
    <!--FACEBOOK-->

    <!--QUIT APP-->
    <string name="quit_app_title">Quit</string>
    <string name="quit_app_content">Sure want to leave?</string>
    <string name="quit_app_cancel">maybe later?</string>
    <string name="quit_app_confirm">Yup!</string>
    <!--QUIT APP-->


    <string name="action_view_on_map">View on map</string>
    <string name="featured_store_recommendation">Recommended for you</string>
    <string name="action_see_all">See all</string>
    <string name="featured_menu_recommendation">These are great!</string>
    <string name="action_request_catering">Catering</string>
    <string name="action_share">Share</string>
    <string name="action_write_review">Review</string>
    <string name="promt_phone">Phone</string>
    <string name="prompt_location">Location</string>


    <!--Dummy Texts-->
    <string name="dummy_content_lorem" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec.</string>
    <string name="dummy_content_cicero" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia</string>
    <string name="dummy_title_lorem" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</string>
    <string name="dummy_title_cicero" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit</string>
    <!--Dummy Texts-->


</resources>