<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash4_background_blured"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_marginLeft="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REGISTER"
            android:textColor="@color/loginColor"
            android:textSize="36dp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="Widget.Design.TextInputLayout"

                >

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="Widget.Design.TextInputLayout"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="Widget.Design.TextInputLayout"
                >

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    style="Widget.Design.TextInputLayout"
                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            app:fb_defaultColor="@color/loginColor"
            app:fb_radius="30dp"
            app:fb_text="@string/btn_login"
            app:fb_textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            >
            <ImageButton
                android:id="@+id/google_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/googleoval"
                android:background="#00000000"
                android:layout_margin="9dp"
                />
            <ImageButton
                android:id="@+id/facebook_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/facebookoval"
                android:background="#00000000"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/moveToSignupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btn_enter_register"
                android:textAllCaps="false"
                android:textColor="#FFF"/>

<!--
            <Button
                android:id="@+id/problemWithLoggingIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="문제가 있으세요?"
                android:textAllCaps="false"
                android:textColor="#FFF"/>-->


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>